added login icon on nav

--- a/app/views/layouts/_top_nav.html.erb
+++ b/app/views/layouts/_top_nav.html.erb
@@ -25,6 +25,10 @@
             <% end %>
           </ul>
         </li>
+        <li class="login">
+          <%= link_to "Log in or Register" %></a>
+        </li>
+
       </ul>
       <ul class="nav navbar-nav navbar-right">
        <li class="dropdown">
