just started to use Bcrypt anthentication. manually created files before

--- a/app/views/layouts/_top_nav.html.erb
+++ b/app/views/layouts/_top_nav.html.erb
@@ -26,7 +26,7 @@
           </ul>
         </li>
         <li class="login">
-          <%= link_to "Log in or Register" %></a>
+          <%= link_to "Log in or Register", [:new, :user] %></a>
         </li>
 
       </ul>
