--- a/app/views/jungle_mailer/receipt_notification.text.erb
+++ b/app/views/jungle_mailer/receipt_notification.text.erb
@@ -1,4 +1,4 @@
 Thank you for shopping at Jungle.com!
 
 You have successfully placed your order.
-Your order confirmation is: <%= @order.login %>.
+Your order confirmation is: 
