moved average_rating function to product helper, cleaned the code

--- a/app/views/products/_product.html.erb
+++ b/app/views/products/_product.html.erb
@@ -13,7 +13,7 @@
       <%= fa_icon "shopping-cart", text: 'Add' %>
     <% end %>
     <% if product.review.length > 0 %>
-      <p class="rating"><%= pluralize (product.review.sum(:rating) / product.review.length).round(1), 'star'%> </p>
+      <p class="rating"><%= average_rating(product)%> </p>
     <% end %>
     <%= link_to product, class: 'btn btn-default pull-right' do %>
       Details &raquo;
