--- a/app/views/products/_product.html.erb
+++ b/app/views/products/_product.html.erb
@@ -14,6 +14,8 @@
     <% end %>
     <% if product.review.length > 0 %>
       <p class="rating"><%= average_rating(product)%> </p>
+    <% else %>
+      <p class="rating">0 review</p>
     <% end %>
     <%= link_to product, class: 'btn btn-default pull-right' do %>
       Details &raquo;
