moved new review and review columns to the right

--- a/app/assets/stylesheets/products.scss
+++ b/app/assets/stylesheets/products.scss
@@ -95,3 +95,12 @@ main section.products-show {
     }
   }
 }
+
+div.new-review {
+  margin-left: 44%;
+  margin-bottom: 5%;
+}
+
+div.reviews {
+  margin-left: 50%;
+}
