--- a/app/assets/stylesheets/products.scss
+++ b/app/assets/stylesheets/products.scss
@@ -57,15 +57,18 @@ main section.categories-show {
       }
 
       aside.sold-out {
+        // CodeReviewNote: Organize css rules by 'category', totally optional but helps with readability a bit
         position: absolute;
         top: 0;
         left: 0;
+
         padding: 10px;
-        background-color: #df8d8d;
         border-top-left-radius: 4px;
         border-bottom-right-radius: 20px;
+
         font-size: 0.8em;
         color: white;
+        background-color: #df8d8d;
       }
 
 
