--- a/app/views/admin/categories/index.html.erb
+++ b/app/views/admin/categories/index.html.erb
@@ -5,7 +5,7 @@
   </header>
 
   <div class="well">
-    <%= link_to '+ New Category',class: 'btn btn-info' %>
+    <%= link_to '+ New Category', new_admin_category_path, class: 'btn btn-info' %>
   </div>
 
   <div class="panel panel-default categories">
