--- a/app/views/products/_product.html.erb
+++ b/app/views/products/_product.html.erb
@@ -12,7 +12,7 @@
     <%= link_to add_item_cart_path(product_id: product.id), class: 'btn btn-primary', method: :put do %>
       <%= fa_icon "shopping-cart", text: 'Add' %>
     <% end %>
-    <% if product.review.length > 0 %>
+    <% if product.reviews.length > 0 %>
       <p class="rating"><%= average_rating(product)%> </p>
     <% else %>
       <p class="rating">0 review</p>
